<resources>
    <string name="app_name">ToDoList</string>
    <string name="title">Task Name</string>
    <string name="save">Save</string>
    <string name="completed">Completed</string>
    <string name="compl">(%d</string>
    <string name="all">/%d)</string>
    <string name="empty_list">You have no tasks</string>
    <string name="created_on">"from"</string>
    <string name="delete_all">Delete all tasks</string>
    <string name="delete_completed">Delete completed tasks</string>
    <string name="undo">Undo</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="add_category">Add category</string>
    <string name="tasks">tasks</string>
    <string name="category">Category</string>
    <string name="tasksCapital">Tasks</string>
    <string name="enter_category_name">Category name</string>
    <string name="pick_a_color_for_category">Pick a color for category</string>
    <string name="cancel">Cancel</string>
    <string name="due_date">Set due date</string>
    <string name="delete_category">Delete Category</string>
    <string name="create_task">Create Task</string>
    <string name="create_new_task">Create New Task</string>
    <string name="select_category">Select category</string>
    <string name="no_categories_available">No categories available</string>
    <string name="count_tasks">%1$d tasks</string>
    <string name="tasks_completed">%1$d completed</string>
    <string name="tasks_left">%1$d left</string>
    <string name="progress_percentage">%1$d %%</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="add">Add</string>
    <string name="question_delete_tasks_completed">Are you sure you want to delete all tasks completed?</string>
    <string name="question_delete_all_tasks">Are you sure you want to delete all tasks?</string>
    <string name="question_delete_category">Deleting %1$s category will also delete all its tasks. Are you sure you want to proceed further?</string>
    <string name="delete">Delete</string>
</resources>
